crates/oxc_react_compiler/tests/snapshots/relay-transitive-mixeddata.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/relay-transitive-mixeddata.js
---
import { c as _c } from "react/compiler-runtime";
import { useFragment } from "shared-runtime";
/**
* React compiler should infer that the returned value is a primitive and avoid
* memoizing it.
*/
function useRelayData(t0) {
	"use memo";
	const $ = _c(2);
	const { query, idx } = t0;
	const data = useFragment("", query);
	const t1 = data.a[idx];
	let t2;
	if ($[0] !== t1) {
		t2 = t1.toString();
		$[0] = t1;
		$[1] = t2;
	} else {
		t2 = $[1];
	}
	return t2;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useRelayData,
	params: [{
		query: "",
		idx: 0
	}],
	sequentialRenders: [
		{
			query: "",
			idx: 0
		},
		{
			query: "",
			idx: 0
		},
		{
			query: "",
			idx: 1
		}
	]
};
